<resources>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-2270371481189370/5668516244</string>
    <string name="app_name">Daily words</string>
    <string name="add_fav">Added to favorites</string>
    <string name="appwidge_content">Content</string>
    <string name="allready_imported">(already imported)</string>
    <string name="back">Back</string>
    <string name="choose_date">Choose Date</string>
    <string name="columns">Columns</string>
    <string name="favoriten">Marked Verses</string>
    <string name="feedback">Feedback / Report bugs</string>
    <string name="haveTo_import">(must be selected)</string>
    <string name="importString">import</string>
    <string name="importVerb">import</string>
    <string name="import_language">Language</string>
    <string name="info">Info / Help</string>
    <string name="info_autor">from Martin Schalter</string>
    <string name="info_entwickler_title">About the developer</string>
    <string name="info_fragment_launcherIcon">launcher icon</string>
    <string name="info_title">Daily words - Android APP</string>
    <string name="info_questions_title">Where to leave Questions, Problems, Suggestions?</string>
    <string name="info_questions_content">While the actual usage of this app, should be absolutely trouble free: If this app doesent work properly (smoothly): Just contact me using the Feedback / Report function (embedded in this app).</string>
    <string name="info_unterstuetzen_title">How can I support this APP?</string>
    <string name="intro_change_in_settings">Can be changed in the settings</string>
    <string name="intro_developer_switch">Activate Advertising</string>
    <string name="intro_developer_title">Support the developer</string>
    <string name="intro_mark_content">Mark verses and capture thoughts</string>
    <string name="intro_mark_switch">Activate Notes</string>
    <string name="intro_mark_title">Mark and notes</string>
    <string name="intro_notification_content">Let god speak personally to you every day new</string>
    <string name="intro_notification_switch">Activate Notifications</string>
    <string name="intro_notifications">Notifications</string>
    <string name="intro_widgets_content">Creat your own and personalized Widgets, to never lose sight of god’s word.</string>
    <string name="intro_widgets_title">Widgets</string>
    <string name="losung_default_text">An error has occurred…</string>
    <string name="mail_senden">Send me a mail:</string>
    <string name="mark">Mark</string>
    <string name="mark_favorite">Mark</string>
    <string name="no_date">Date not available</string>
    <string name="notes_hint">Notes</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="pref_ads_title">Show Ads</string>
    <string name="pref_general">General</string>
    <string name="pref_google_title">Send Anonymous Statistics</string>
    <string name="pref_notes_title">Show Notes</string>
    <string name="pref_notification_art">Content</string>
    <string name="pref_notifications">Notifications</string>
    <string name="pref_time">Time for notification</string>
    <string name="rate">Rate</string>
    <string name="remove_fav">Removed from favorites</string>
    <string name="rows">Rows</string>
    <string name="search">Search</string>
    <string name="search_dialog_years">Years</string>
    <string name="search_results">Search results</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="suchen_dialog_hint">Scripture, Bible vers, …</string>
    <string name="suchen_dialog_markierte">Only marked</string>
    <string name="suchen_dialog_negative_button">Cancel</string>
    <string name="suchen_dialog_positiv_button">Go</string>
    <string name="suchen_dialog_textView">Search:</string>
    <string name="suchen_dialog_title">Search</string>
    <string name="title_activity_intro">Intro</string>
    <string name="title_activity_settings">Settings</string>
    <string name="widget_acitivity_default_columns">Columns: 2</string>
    <string name="widget_activity_background">Background</string>
    <string name="widget_activity_default_row">Rows: 1</string>
    <string name="widget_activity_finish">Finish</string>
    <string name="widget_activity_fontcolor">Font Color</string>
    <string name="widget_activity_fontsize">Font Size</string>
    <string name="widget_activity_previewSettings">Preview Settings</string>
    <string name="widget_activity_textview">Text Settings</string>
    <string name="widget_is_loading">Widget is loading…</string>
    <string name="info_entwickler_content">This is not an officially APP. I only finished school and love to share God\'s word with others</string>
    <string name="info_more_questions">If you found room for improvement or have any further suggestions: Feel free to write me! I am looking forward to hear from you!</string>
    <string name="info_unterstuetzen_content">You are just totally amazed by the Daily words app? It works properly, fully serves its purpose while being well-designed all the time!? If that’s your opinion: Great to hear! Feel free to rate the app and leave a comment.\n\nWith enabling advertising for this app, you support the development of this app (and therefore the spreading of gods daily word into many lives)</string>
    <string name="intor_developer_content">One of my next aims is to make this app aviailable in even more lanuages. You can support me with that, and any other future improvements by enabling advertising for this app.</string>
    <string name="lehrtext">Daily word (NT)</string>
    <string name="lehrtext_default_title">NT title</string>
    <string name="lehrtext_default_vers">NT vers</string>
    <string name="lehrtexte">Daily words (NT)</string>
    <string name="losung">Daily word (OT)</string>
    <string name="losung_and_lehrtext">Daily word (OT &amp; NT)</string>
    <string name="losung_default_title">OT title</string>
    <string name="losung_default_vers">OT vers</string>
    <string name="losung_from">Daily word from </string>
    <string name="losungen">Daily words</string>
    <string name="pref_ads_summary">If you want to support this app, you can activate advertising. Then, a small banner at the bottom of the app will be displayed (requires restart)</string>
    <string name="pref_google_summary">The APP is sending anonymous usage statistics to improve the APP</string>
    <string name="suchen_dialog_lehrtext_verse">NT verses</string>
    <string name="suchen_dialog_losungs_verse">OT verses</string>
    <string name="import_maybeMistakes"> This translation may contain errors. Report an error using the feedback function</string>
    <string name="import_onlyAT">currently, only the old testament is supported</string>
    <string name="import_onlyNT">currently, only the new testament is supported</string>
    <string name="import_restInEnglish">The rest will be displayed in english</string>
    <string name="needTranslation">The text for this langauge has yet to be translated (Daily words are translated). If you can help me send me a Mail</string>
    <string name="notification_list_nt">Old testament</string>
    <string name="notification_list_ot">New testament</string>
    <string name="notification_list_nt_ot">New and old testament</string>
    <string name="country_english">English</string>
    <string name="country_german">German</string>
    <string name="country_spanish">Spanish</string>
    <string name="importing">importing…</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="country_france">french</string>
    <string name="pref_language">Language</string>
    <string name="pref_language_summary">Will only change the text of buttons and text fields. The daily words will not change</string>
    <string name="need_restart">You need to restart this APP</string>
    <string name="download_ticker">Audio is downloading</string>
    <string name="content_title">Audio downloading</string>
    <string name="content_text">%d complete</string>
    <string name="audio_download">Download short audio</string>
    <string name="change_language">Import / Change Language</string>
    <string name="pref_audio_autodownload_title">Auto download</string>
    <string name="pref_audio_autodownload_summary_on">A short sermon will be automatically downloaded every day</string>
    <string name="pref_audio_autodownload_summary_off">You have to start the download for a short sermon manually</string>
    <string name="pref_audio_download_title">Download or stream short sermon</string>
    <string name="pref_audio_download_summary_on">The short sermon will be downloaded and saved</string>
    <string name="pref_audio_download_summary_off">The short sermon will be streamed from server (you need an active internet connection)</string>
    <string name="pref_audio_autodownload_network_title">Network type</string>
    <string name="pref_audio_autodownload_network_summary">Choose if the sermon will only downloaded when connected with wifi</string>
    <string name="pref_audio_externalstorage_title">Save sermon on SD-Card</string>
    <string name="pref_audio_externalstorage_summary_on">Sermons will be saved at SD-Card</string>
    <string name="pref_audio_externalstorage_summary_off">Sermons will be saved in internal storage</string>
    <string name="pref_audio">Audio</string>
    <string name="changelog_title">Changelog</string>
    <string name="button_ok">OK</string>
    <string name="download_error">An unknown error happened. Please try again</string>
    <string name="download_starting">Download is starting</string>
    <string name="download_error_connection">Download failed, please check your internet connection!</string>
    <string name="still_in_internal">Existing files are still in internal storage</string>
    <string name="still_in_external">Existing files are still in external storage</string>
    <string name="monthly_verses">Monthly / weekly verses</string>
    <string name="pref_customize">Customize</string>
    <string name="month_title">Monthly vers</string>
    <string name="delete">Delete</string>
    <string name="delete_failed">Failed to delete audio</string>
    <string name="audio_delete_audio_title">Delete old audio - files</string>
    <string name="audio_delete_audio_summary">You can choose what you want to delete</string>
    <string name="use_quick_bible">Open vers in Quick Bible App</string>
    <string name="use_quick_bible_on">Just click on the vers to open it in the APP</string>
    <string name="use_quick_bible_off">Nothing will happen if you click on the vers</string>
    <string name="open_in_app_failed">Failed to open vers in Quick Bible</string>
    <string name="all_network">All network types</string>
    <string name="only_wifi">Only with WIFI</string>
    <string name="invalid_number">Invalid number…</string>
    <string name="audio_delete_days_title">Delte audio files automatically</string>
    <string name="audio_delete_days_summary">Delete not favored sermons after x days (0 to deaktivate)</string>
    <string name="audio_download_downloaded">Play audio file from %1$s</string>
    <string name="audio_download_download">Download audio file from %1$s</string>
    <string name="widget">Configure widgets</string>
    <string name="open_verse">Open verse in Quick-Bible or Bibleserver</string>
    <string name="open_in_app_dialog">Show verse in Quick Bible (an APP that can be downloaded in Google Play Store)</string>
    <string name="open_in_browser_dialog">Show vers in the browser (bibleserver.com)</string>
    <string name="pref_custom_color">Change color</string>
    <string name="remember_my_decision">Remember my decision</string>
    <string name="default_open_verses">Default action - click on vers</string>
    <string name="pref_which_vers_title">Show only NT / OT</string>
</resources>