<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/suchen_dialog_textView"
        android:id="@+id/textView_title"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/textView_title"
        android:layout_toEndOf="@+id/textView_title"
        android:layout_marginStart="3dp"
        android:hint="@string/suchen_dialog_hint" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/losungen"
        android:id="@+id/checkBox_losung"
        android:layout_alignTop="@+id/checkBox_lehretext"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:checked="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lehrtexte"
        android:id="@+id/checkBox_lehretext"
        android:checked="true"
        android:layout_below="@+id/editText"
        android:layout_toRightOf="@+id/checkBox_losung"
        android:layout_toEndOf="@+id/checkBox_losung" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/suchen_dialog_losungs_verse"
        android:id="@+id/checkBox_losungsverse"
        android:layout_below="@+id/checkBox_losung"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:checked="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/suchen_dialog_lehrtext_verse"
        android:id="@+id/checkBox_lehrtextvers"
        android:layout_alignTop="@+id/checkBox_losungsverse"
        android:layout_toRightOf="@+id/checkBox_losungsverse"
        android:layout_toEndOf="@+id/checkBox_losungsverse"
        android:layout_marginStart="5dp"
        android:checked="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notes_hint"
        android:id="@+id/checkBox_notizen"
        android:layout_below="@+id/checkBox_losungsverse"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:checked="false" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/suchen_dialog_markierte"
        android:id="@+id/checkBox_markiert"
        android:checked="false"
        android:layout_alignTop="@+id/checkBox_notizen"
        android:layout_toRightOf="@+id/checkBox_notizen"
        android:layout_toEndOf="@+id/checkBox_notizen" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/search_dialog_years"
        android:id="@+id/textView_years"
        android:layout_below="@+id/checkBox_notizen"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_years"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linear_layout_years"></LinearLayout>
</RelativeLayout>