<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
    <de.schalter.losungen.preferences.SwitchPreference
        android:key="notifications_losung"
        android:title="@string/pref_notifications"
        android:defaultValue="true" />

    <ListPreference
        android:key="notifications_art"
        android:dependency="notifications_losung"
        android:title="@string/pref_notification_art"
        android:defaultValue="0"
        android:entries="@array/pref_notifications_list_titles"
        android:entryValues="@array/pref_notifications_list_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

    <de.schalter.losungen.preferences.TimePreference
        android:key="notification_time"
        android:defaultValue="420"
        android:title="@string/pref_time"
        android:dependency="notifications_losung"
        />

</PreferenceScreen>
