<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="4dp"
    android:layout_margin="3dp"
    android:id="@+id/card_view_losung_lehrtext"
    android:focusable="true"
    android:clickable="true"
    android:foreground="?selectableItemBackground"
    android:background="?colorBackground">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/relative_layout_losung_card"
        android:padding="5dp"
        android:background="?colorBackground">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/losung_default_title"
            android:id="@+id/textView_losungTitle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/losung_default_text"
            android:id="@+id/textView_losungText"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="false"
            android:layout_below="@+id/textView_losungTitle"
            android:layout_marginTop="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/losung_default_vers"
            android:id="@+id/textView_losungVers"
            android:layout_below="@+id/textView_losungText"
            android:layout_marginTop="7dp"
            android:textColor="?colorAccent"
            android:layout_marginRight="15dp"
            android:textSize="15sp"
            android:layout_alignParentEnd="true" />

        <TextView
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/lehrtext_default_title"
            android:id="@+id/textView_lehrtextTitle"
            android:layout_below="@+id/textView_losungVers"
            android:layout_alignLeft="@+id/textView_losungVers"
            android:layout_alignStart="@+id/textView_losungVers"
            android:layout_marginTop="0dp"
            android:enabled="false" />

        <TextView
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/lehrtext_default_vers"
            android:id="@+id/textView_lehrtextVers"
            android:layout_below="@+id/textView_lehrtext"
            android:layout_marginTop="7dp" />

        <TextView
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/losung_default_text"
            android:id="@+id/textView_lehrtext"
            android:layout_below="@+id/textView_lehrtextTitle"
            android:layout_marginTop="5dp" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textAutoComplete|textMultiLine"
            android:ems="10"
            android:id="@+id/editText_notizen_losung_lehrtext"
            android:layout_below="@+id/textView_lehrtextVers"
            android:layout_alignLeft="@+id/textView_lehrtextVers"
            android:layout_alignStart="@+id/textView_lehrtextVers"
            android:layout_marginTop="8dp"
            android:hint="@string/notes_hint"
            android:singleLine="false"
            android:gravity="bottom" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/imageView_mark"
            android:layout_alignTop="@+id/textView_losungTitle"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_action_star"
            android:tint="?colorPrimary"
            android:contentDescription="@string/mark"
            />

    </RelativeLayout>
</android.support.v7.widget.CardView>